构造 `Client` 时，如果不指定密钥对，将从环境变量 `KSYUN_ACCESS_KEY` 与 `KSYUN_SECRET_KEY` 获得

--- a/notebooks/guide.ipynb
+++ b/notebooks/guide.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "首先设定 KS3 的 AccessKey和SecretKey。\n",
     "\n",
-    "本例中，将它们放在环境变量配置文件 `.env` 中，名为 `KS3_ACCESS_KEY` 和 `KS3_SECRET_KEY`，然后使用 [`python-dotenv`](https://github.com/theskumar/python-dotenv) 加载"
+    "本例中，将它们放在环境变量配置文件 `.env` 中，名为 `KSYUN_ACCESS_KEY` 和 `KSYUN_SECRET_KEY`，然后使用 [`python-dotenv`](https://github.com/theskumar/python-dotenv) 加载"
    ]
   },
   {
@@ -34,21 +34,14 @@
     "%load_ext dotenv\n",
     "\n",
     "# Use find_dotenv to locate the file\n",
-    "%dotenv\n",
-    "\n",
-    "\n",
-    "from IPython.display import display\n",
-    "import os\n",
-    "\n",
-    "ACCESS_KEY = os.environ['KS3_ACCESS_KEY']\n",
-    "SECRET_KEY = os.environ['KS3_SECRET_KEY']"
+    "%dotenv"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Endpoint"
+    "## 指定Endpoint"
    ]
   },
   {
@@ -82,7 +75,7 @@
    "source": [
     "from ks33requests.client import get_s3obj, Client\n",
     "\n",
-    "c = Client(ACCESS_KEY, SECRET_KEY, endpoint=ENDPOINT)"
+    "c = Client(endpoint=ENDPOINT)"
    ]
   },
   {
@@ -135,7 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "<ks33requests.schemas.s3_sub.ListAllMyBucketsResultSub at 0x7f748c4536a0>"
+       "<ks33requests.schemas.s3_sub.ListAllMyBucketsResultSub at 0x7f790b8c99e8>"
       ]
      },
      "execution_count": 5,
